Fixing flip cards on IE, Mozilla, Safari.

--- a/style.css
+++ b/style.css
@@ -271,7 +271,6 @@ h1 {
     width: 33.3%;
 }
 
-
 /* FLIP CARDS */
 #f1_container {
   position: relative;
@@ -281,16 +280,22 @@ h1 {
   /*z-index: 1;*/
 }
 #f1_container {
-  /*perspective: 1000;*/
+  perspective: 1000;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
 }
 #f1_card {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
   transition: all 0.4s ease-in-out;
 }
 #f1_container:hover #f1_card {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
     box-shadow: -5px 5px 5px #606060;
 }
 .face {
@@ -309,6 +314,8 @@ h1 {
 .face.back {
     display: block;
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg)
     box-sizing: border-box;
     padding-top: 60px;
     padding-left: 30px;
@@ -445,6 +452,49 @@ h1 {
 
 
 
+
+
+/* Radial Out */
+.hvr-radial-out {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  overflow: hidden;
+  background: #e1e1e1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-radial-out:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #2098D1;
+  border-radius: 100%;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-radial-out:hover, .hvr-radial-out:focus, .hvr-radial-out:active {
+  color: white;
+}
+.hvr-radial-out:hover:before, .hvr-radial-out:focus:before, .hvr-radial-out:active:before {
+  -webkit-transform: scale(2);
+  transform: scale(2);
+}
 
 
 
